--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,9 +57,10 @@ fs-err = "3.2"
 atomic-write-file = "0.3"
 dirs-next = "2.0"
 
+smallvec = { version = "1.13", features = ["serde", "union", "const_generics", "write"] }
 tantivy = { version = "0.25.0", optional = true, default-features = false, features = ["mmap"] }
 ort = { version = "2.0.0-rc.10", optional = true }
-hnsw = { version = "0.11.0", optional = true }
+hnsw = { version = "0.11.0", optional = true, features = ["serde"] }
 jsonwebtoken = { version = "10.0.0", optional = true, features = ["rust_crypto"] }
 image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp"] }
 ndarray = { version = "0.16", optional = true }
@@ -72,7 +73,8 @@ rustfft = { version = "6.2", optional = true }
 # Encryption capsules (.mv2e) - feature-gated
 argon2 = { version = "0.5", optional = true }
 aes-gcm = { version = "0.10", optional = true }
-rand = { version = "0.8", optional = true }
+rand = { version = "0.8", optional = true, features = ["serde1"] }
+rand_pcg = { version = "0.3", optional = true, features = ["serde1"] }
 zeroize = { version = "1.7", optional = true }
 
 # Candle ML framework for Whisper transcription
@@ -86,6 +88,7 @@ byteorder = { version = "1.5", optional = true }
 symspell = { version = "0.4", optional = true }
 # SIMD acceleration for vector distance calculations
 wide = { version = "1.1", optional = true }
+space = { version = "0.17", optional = true }
 
 [features]
 default = ["lex", "pdf_extract", "simd"]
@@ -97,7 +100,7 @@ extractous = ["dep:extractous"]
 pdf_extract = ["dep:pdf-extract"]
 # High-accuracy PDF extraction with perfect word spacing (recommended for 2025+)
 pdf_oxide = ["dep:pdf_oxide"]
-vec = ["dep:ort", "dep:hnsw", "dep:ndarray", "dep:tokenizers"]
+vec = ["dep:ort", "dep:hnsw", "dep:ndarray", "dep:tokenizers", "dep:space", "dep:rand", "dep:rand_pcg"]
 clip = ["vec", "dep:image", "dep:ndarray", "dep:rayon", "dep:tokenizers"]
 mmap = []
 pdfium = ["dep:pdfium-render"]
@@ -120,6 +123,7 @@ encryption = ["dep:argon2", "dep:aes-gcm", "dep:rand", "dep:zeroize"]
 symspell_cleanup = ["dep:symspell"]
 # SIMD acceleration for vector distance calculations
 simd = ["dep:wide"]
+hnsw_bench = ["dep:hnsw", "dep:rand", "dep:space", "dep:rand_pcg"]
 
 [dev-dependencies]
 fastrand = "2.0"
@@ -141,3 +145,8 @@ required-features = ["simd"]
 [[bench]]
 name = "search_precision_benchmark"
 harness = false
+
+[[bench]]
+name = "vec_search_benchmark"
+harness = false
+required-features = ["hnsw_bench"]
